--- a/assignment-7/ewald-web150-a07.html
+++ b/assignment-7/ewald-web150-a07.html
@@ -13,14 +13,14 @@
 
 	<button class="shape" data-shape="square">[]</button>
 	<button class="shape" data-shape="circle">O</button>
-	<button class="shape" data-shape="design">*</button>
 	<button class="size" data-size="5">Small</button>
 	<button class="size" data-size="10">Medium</button>
 	<button class="size" data-size="20">Large</button>
 	<button class="color" data-color="red">Red</button>
 	<button class="color" data-color="blue">Blue</button>
 	<button class="color" data-color="black">Black</button>
-
+	<button class="erase">Erase</button>
+	
 	<canvas id="canvas" width=800 height=600></canvas>
 
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
@@ -48,18 +48,6 @@ var drawCircle = function(x, y, size) {
 	context.fill();
 };
 
-// Note: Hope this isn't too useless/dumb of an idea! It's modern art......
-// Couldn't get the colors to affect it for some reason though.
-
-var drawDesign = function(x, y, size) {
-	context.beginPath();
-	context.arc(x, y, size / 2, Math.PI, 2 * Math.PI);
-	context.stroke();
-	context.strokeRect(x - size / 2, y - size, size, size / 2);
-	context.strokeRect(x - size, y - size / 2, size / 2, size);
-	context.strokeRect(x + size / 24, y + size / 42, size / 2, size / 2);
-};
-
 
 var draw
 
@@ -73,8 +61,6 @@ $canvas.on("mousemove", function(e) {
 			drawCircle(x, y, brush.size);
 		} else if (brush.shape == "square") {
 			drawRect(x, y, brush.size);
-		} else if (brush.shape == "design") {
-			drawDesign(x, y, brush.size);
 		}
 	}
 });
@@ -106,6 +92,12 @@ colors.on("click", function() {
 	var $this = $(this);
 	var color = $this.attr("data-color");
 	brush.color = color;
+});
+
+var erase = $(".erase");
+erase.on("click", function(x, y, size) {
+	context.fillStyle="white";
+	context.fillRect(0, 0, 800, 600);
 });
 
 </script>
